[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-notifier"
version = "0.1.0"
description = "A small Python utility for generating audio notification sounds for notebooks and training scripts."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_notifier*"]